--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </h1>
             <p class="text-alert">
                  Les données saisies sont stockées exclusivement sur votre téléphone ou votre ordinateur.
-                 Aucune information n'est collectée par le Ministère de l'Intérieur.
+                 Aucune information n'est collectée.
                  L'attestation pdf générée contient un QR Code.
                  Ce code-barres graphique permet de lire les informations portées dans votre attestation au moment de leur saisie.
                  Il peut être déchiffré à l'aide de tout type de lecteur de QR code générique. 
@@ -138,7 +138,7 @@
     
     <footer class="main-footer">
         <div class="footer-links">
-            <a target="_blank" class="footer-link">Jonathan240196</a>
+            <a href="https://github.com/jonathan240196/covid19" target="_blank" class="footer-link">Code Source (GitHub)</a>
         </div>
     </footer>
     
