--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
    
-    <a class="github-fork-ribbon right-top fixed" target="_blank" data-ribbon="jonathan240196" title="jonathan240196">Jonathan240196</a>
+    <a class="github-fork-ribbon right-top fixed" target="_blank" data-ribbon="NON OFFICIEL" title="NON OFFICIEL">NON OFFICIEL</a>
 
     <header class="wrapper"> 
         <div>
